# dukascopy-go

./: .gitignore  README.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/dukascopy-go-sdk/: main.go
internal/cli/: branch_test.go  chunked_download.go  chunked_helpers.go  chunked_merger.go  chunked_worker.go  cli.go  cli_download.go  cli_download_resume.go  cli_download_single.go  cli_helpers.go  cli_sync.go  commands_more_test.go  db_load.go  db_load_clickhouse.go  db_load_influxdb.go  db_load_questdb.go  db_load_test.go  final_error_branches_test.go  final_gap_test.go  helpers_test.go  live.go  live_helpers.go  live_partition.go  live_stdout.go  live_stream.go  live_stream_test.go  live_stream_websocket.go  manifest.go  manifest_clean.go  manifest_inspect.go  manifest_prune.go  manifest_repair.go  manifest_repair_gaps.go  manifest_router_test.go  manifest_verify.go  operation_tui.go  partition.go  partition_legacy.go  partition_parallel_test.go  postgres.go  (+7 more)
internal/csvout/: csv.go  csv_test.go  jsonl.go  parquet.go  parquet_more_test.go
internal/dukascopy/: bi5.go  bi5_test.go  client.go  client_test.go  datafeed_test.go  decoder.go  final_gap_test.go  instruments_list.go
pkg/csvout/: csv.go  csv_assemble.go  csv_config.go  csv_format.go  csv_helpers.go  csv_inspect.go  csv_io.go  csv_reader.go  csv_test.go  csv_writer.go  helpers_test.go  jsonl.go  market_holiday.go  market_profile.go  (+7 more)
sdk/python/: dukascopy.py  example.py  libdukascopy.h  pyproject.toml  setup.py
sdk/python/dukascopy_go/: __init__.py
sdk/python/tests/: test_sdk.py
tests/: README.md
(+22 files in other folders)
